[gd_scene load_steps=2 format=3 uid="uid://c3rl5qjd4g1iq"]

[ext_resource type="Script" uid="uid://c1jvmf5q2hqgk" path="res://scripts/ui/settings_menu.gd" id="1_settings_script"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="AudioSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AudioTitle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection"]
layout_mode = 2
text = "AUDIO"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/MasterVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/MasterVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/MusicVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/MusicVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"

[node name="SFXVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/SFXVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/SFXVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/AudioSection/SFXVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"

[node name="VideoSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VideoTitle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection"]
layout_mode = 2
text = "VIDEO"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection"]
layout_mode = 2

[node name="WindowMode" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/WindowMode"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Window Mode:"

[node name="WindowModeOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/WindowMode"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/Resolution"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Resolution:"

[node name="ResolutionOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/Resolution"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VSync" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/VSync"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "V-Sync:"

[node name="VsyncCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/VSync"]
unique_name_in_owner = true
layout_mode = 2

[node name="FPSLimit" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/FPSLimit"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "FPS Limit:"

[node name="FPSLimitOption" type="OptionButton" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/FPSLimit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VHS" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/VHS"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "VHS Effect:"

[node name="VHSCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/VideoSection/VHS"]
unique_name_in_owner = true
layout_mode = 2

[node name="GameplaySection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GameplayTitle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection"]
layout_mode = 2
text = "GAMEPLAY"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection"]
layout_mode = 2

[node name="Sensitivity" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection/Sensitivity"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Mouse Sensitivity:"

[node name="SensitivitySlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection/Sensitivity"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection/Sensitivity"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "2.0"

[node name="InvertY" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection/InvertY"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Invert Y-Axis:"

[node name="InvertYCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/GameplaySection/InvertY"]
unique_name_in_owner = true
layout_mode = 2

[node name="ControlsSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ControlsTitle" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2
text = "CONTROLS"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2

[node name="MoveForward" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveForward"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Move Forward:"

[node name="MoveForwardButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveForward"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "W"

[node name="MoveBackward" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveBackward"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Move Backward:"

[node name="MoveBackwardButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveBackward"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "S"

[node name="MoveLeft" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveLeft"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Move Left:"

[node name="MoveLeftButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "A"

[node name="MoveRight" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveRight"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Move Right:"

[node name="MoveRightButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/MoveRight"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "D"

[node name="Sprint" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/Sprint"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Sprint:"

[node name="SprintButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/Sprint"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Shift"

[node name="Interact" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/Interact"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Interact:"

[node name="InteractButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/SettingsContent/ControlsSection/Interact"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "E"

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Apply"

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Reset"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"

[node name="RebindPopup" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="RebindLabel" type="Label" parent="RebindPopup"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Press any key..."
horizontal_alignment = 1
vertical_alignment = 1
